--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,5 @@ name: BetterAI
 main: com.focess.betterai.BetterAI
 version: 1.0
 api-version: 1.13
-depend:
-  - PathfinderAPI
-  - ProtocolLib
+depend: [PathfinderAPI,ProtocolLib]
 author: MidCoard
